--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -63,8 +63,20 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menu_Pomoc">
+    <property name="title">
+     <string>&amp;Pomoc</string>
+    </property>
+    <addaction name="actionZamknij"/>
+   </widget>
+   <addaction name="menu_Pomoc"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionZamknij">
+   <property name="text">
+    <string>Zamknij</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
