--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -53,6 +53,19 @@
      <string>Najlepszy wynik: 0</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>520</y>
+      <width>75</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Zamknij</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -60,7 +73,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_Pomoc">
@@ -68,6 +81,7 @@
      <string>&amp;Pomoc</string>
     </property>
     <addaction name="actionZamknij"/>
+    <addaction name="actionO_Qt"/>
    </widget>
    <addaction name="menu_Pomoc"/>
   </widget>
@@ -75,6 +89,11 @@
   <action name="actionZamknij">
    <property name="text">
     <string>Zamknij</string>
+   </property>
+  </action>
+  <action name="actionO_Qt">
+   <property name="text">
+    <string>O Qt</string>
    </property>
   </action>
  </widget>
